--- a/trunk/ ttdc --username trevisthomas/River/.classpath
+++ b/trunk/ ttdc --username trevisthomas/River/.classpath
@@ -73,5 +73,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/tiles-servlet-2.1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/xwork-2.1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-5.1.12-bin.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/c3p0-0.9.1.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
