--- a/trunk/ ttdc --username trevisthomas/River/.classpath
+++ b/trunk/ ttdc --username trevisthomas/River/.classpath
@@ -59,7 +59,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/slf4j-api-1.5.8.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/slf4j-jdk14-1.5.6.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/smtp.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/sqljdbc.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/struts2-codebehind-plugin-2.1.6.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/struts2-config-browser-plugin-2.1.6.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/struts2-core-2.1.6.jar"/>
@@ -74,5 +73,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/xwork-2.1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-5.1.12-bin.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/c3p0-0.9.1.2.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/sqljdbc4.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
