--- a/ ttdc --username trevisthomas/River/.classpath
+++ b/ ttdc --username trevisthomas/River/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="src" path="source/Server"/>
 	<classpathentry kind="src" path="source/Tests"/>
 	<classpathentry kind="src" path="source/Tools"/>
-	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/2wayfilter-1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/activation.jar"/>
@@ -29,8 +28,6 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/ehcache-1.2.3.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/freemarker-2.3.12.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gin.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/guice-2.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-annotations.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/hibernate-commons-annotations.jar"/>
@@ -73,5 +70,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/mysql-connector-java-5.1.12-bin.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/c3p0-0.9.1.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/guice-3.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/javax.inject.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/guice-assistedinject-3.0.jar"/>
+	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gin-1.5-post-gwt-2.2.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
