--- a/FlipCards/war/WEB-INF/web.xml
+++ b/FlipCards/war/WEB-INF/web.xml
@@ -21,6 +21,16 @@
     <url-pattern>/flipcards/studyWords</url-pattern>
   </servlet-mapping>
   
+   <servlet>
+    <servlet-name>loginService</servlet-name>
+    <servlet-class>org.ttdc.flipcards.server.LoginServiceImpl</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>loginService</servlet-name>
+    <url-pattern>/flipcards/login</url-pattern>
+  </servlet-mapping>
+  
   <!-- Default page to serve -->
   <welcome-file-list>
     <welcome-file>FlipCards.html</welcome-file>
