--- a/ ttdc --username trevisthomas/River/source/Server/application.properties
+++ b/ ttdc --username trevisthomas/River/source/Server/application.properties
@@ -1,7 +1,7 @@
 SMTP_AUTH_USER=trevisthomas@gmail.com
-SMTP_AUTH_PWD=xgtjjtt4650
+SMTP_AUTH_PWD=password
 URL=http://www.trevisthomas.com
-BUILD_NUMBER=44
+BUILD_NUMBER=46
 VERSION=7
 SERVER_POLL_RATE_SEC=60
 
