--- a/ ttdc --username trevisthomas/River/source/Server/application.properties
+++ b/ ttdc --username trevisthomas/River/source/Server/application.properties
@@ -1,7 +1,9 @@
 SMTP_AUTH_USER=trevisthomas@gmail.com
 SMTP_AUTH_PWD=password
 URL=http://www.trevisthomas.com
-BUILD_NUMBER=52
+BUILD_NUMBER=53
 VERSION=7
 SERVER_POLL_RATE_SEC=60
-
+PUSH_CERT=/certpath.p12
+PUSH_PASSWORD=password
+PUSH_ENVIRONMENT=dev
