--- a/ ttdc --username trevisthomas/River/source/Server/log4j.properties
+++ b/ ttdc --username trevisthomas/River/source/Server/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=ERROR, A1
+log4j.rootLogger=DEBUG, A1
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
 
@@ -10,22 +10,27 @@ log4j.appender.A1.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
 # Print only messages of level WARN or above in the package com.foo.
 log4j.logger.org.ttdc=DEBUG
+#log4j.logger.net.sf.org.ttdc=DEBUG
 
 
 #This hibernate logging stuff doesnt work worth a turd.
 #log4j.logger.org.hibernate=DEBUG
 
-log4j.logger.org.hibernate.persister.entity=debug
+log4j.logger.org.hibernate.persister.entity=ERROR
 
 
-log4j.logger.net.sf.hibernate=debug
+log4j.logger.net.sf.hibernate=ERROR
 
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.net.sf.hibernate.connection.DriverManagerConnectionProvider=trace
 
 ### log JDBC bind parameters ###
-log4j.logger.net.sf.hibernate.type=debug
+log4j.logger.net.sf.hibernate.type=ERROR
 
 ### log prepared statement cache activity ###
-log4j.logger.net.sf.hibernate.ps.PreparedStatementCache=debug
+log4j.logger.net.sf.hibernate.ps.PreparedStatementCache=ERROR
+
+
+log4j.logger.net.sf.ehcache=WARN
+
