--- a/ ttdc --username trevisthomas/River/source/Server/application.properties
+++ b/ ttdc --username trevisthomas/River/source/Server/application.properties
@@ -4,6 +4,6 @@ URL=http://www.trevisthomas.com
 BUILD_NUMBER=53
 VERSION=7
 SERVER_POLL_RATE_SEC=60
-PUSH_CERT=/certpath.p12
-PUSH_PASSWORD=password
+PUSH_CERT=/TTDCPushDev.p12
+PUSH_PASSWORD=xgtjjtt
 PUSH_ENVIRONMENT=dev
