Some old cruft is in here.  I dont know what those changes to UserListPanel are for, or when.  But i'm pertty sure it's production.

--- a/ ttdc --username trevisthomas/River/source/Server/application.properties
+++ b/ ttdc --username trevisthomas/River/source/Server/application.properties
@@ -7,3 +7,7 @@ SERVER_POLL_RATE_SEC=60
 PUSH_CERT=/TTDCPushDev.p12
 PUSH_PASSWORD=xgtjjtt
 PUSH_ENVIRONMENT=dev
+#PUSH_CERT=/TTDCPushProd.p12
+#PUSH_PASSWORD=TIQuar5!ng
+#PUSH_ENVIRONMENT=prod
+
